# liminality

./: Cargo.toml  fix.sh  fix_doc.sh
crates/liminality-daemon/: Cargo.toml
crates/liminality-daemon/src/: main.rs
crates/liminality-engine/: Cargo.toml
crates/liminality-engine/src/: lib.rs
crates/liminality-model/: Cargo.toml
crates/liminality-model/src/: contract.rs  edge.rs  error.rs  filter.rs  id.rs  lib.rs  node.rs  resource.rs  space.rs  time.rs  world.rs
crates/liminality-protocol/: Cargo.toml
crates/liminality-protocol/src/: lib.rs
examples/: furnace_line.rs
