[workspace]
members = [
    "crates/liminality-model",
    "crates/liminality-engine",
    "crates/liminality-protocol",
    "crates/liminality-daemon",
]
resolver = "2"

[package]
name = "liminality"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
liminality-model = { path = "crates/liminality-model" }
liminality-engine = { path = "crates/liminality-engine" }
liminality-protocol = { path = "crates/liminality-protocol" }

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5.3", features = ["util"] }
tower-service = "0.3.3"
