[package]
name = "liminality-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
liminality-model = { path = "../liminality-model" }
liminality-engine = { path = "../liminality-engine" }
liminality-protocol = { path = "../liminality-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
