[package]
name = "liminality-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
liminality-model = { path = "../liminality-model" }
liminality-engine = { path = "../liminality-engine" }
liminality-protocol = { path = "../liminality-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
axum-test = "20.1.0"
reqwest = { version = "0.13.4", features = ["json"] }
